# cleon

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.sh  cleon  cleon.sh  cleon_demo.ipynb  clippy.sh  install.sh  jupyter.sh  ladon  ladon_demo.ipynb  lint.sh  template.md  test.sh  tutorial.ipynb
.github/workflows/: extension-release.yml  pr-checks.yml  release-all.yml  release.yml
extension/: package-lock.json  package.json  pyproject.toml  tsconfig.tsbuildinfo
extension/cleon_cell_control/labextension/: build_log.json  package.json
extension/cleon_cell_control/labextension/static/: 509.a283a513993b800e9c62.js  509.a99224f47ed4e5bee57d.js  lib_index_js.93dc1766ebce314ce69e.js  lib_index_js.93dc1766ebce314ce69e.js.map  lib_index_js.js  lib_index_js.js.map  remoteEntry.449afd68805695bd74dd.js  remoteEntry.449afd68805695bd74dd.js.map  remoteEntry.9d5548fca8cbda27401b.js  remoteEntry.9d5548fca8cbda27401b.js.map  remoteEntry.b5c8832af78589154f3e.js  remoteEntry.e2110e6f104e603c2027.js  remoteEntry.e8df8bb809c0f44e1f15.js
extension/lib/: index.js  index.js.map
extension/src/: index.ts
prompts/: cleon.md  do.md  learn.md
python/: pyproject.toml
python/cleon/: Cargo.toml
python/ladon/: Cargo.toml
python/ladon/src/: lib.rs
python/src/cleon/: __init__.py  backend.py  cli.py  magic.py  oauth.py  settings.py
python/src/ladon/: __init__.py  magic.py
python/tests/: test_gemini_magic.py  test_import_cleon.py  test_magic.py  test_templates.py
scripts/: stage_cli.sh
src/: main.rs
