[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "cleon"
version = "0.1.13"
description = "A Genetic Dynasty of Agentic Clones for Jupyter Notebooks"
requires-python = ">=3.9"
dependencies = ["ipython>=8.0", "websocket-client>=1.6"]
authors = [{ name = "Madhava Jay", email = "me@madhavajay.com" }]
keywords = ["codex", "cleon", "ipython"]
readme = "README.md"
urls = { Homepage = "https://github.com/madhavajay/cleon", Repository = "https://github.com/madhavajay/cleon" }

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "cleon/Cargo.toml"
module-name = "cleon._cleon"
python-source = "src"
python-packages = ["cleon"]
include = [
    "src/cleon/py.typed",
    "src/cleon/_cleon.pyi",
    "src/cleon/bin/*",
    "src/cleon/images/*",
]

[dependency-groups]
dev = [
    "types-pygments>=2.19.0.20251121",
]
